# instrument-designer

./: .gitignore  CATCH-UP-DESKTOP-BREAKTHROUGH.md  CATCH-UP-DESKTOP.md  FINAL_STATE.json  ISSUE_TAILSCALE_BODY.md  MSG-FROM-DESKTOP.md  PROJECT.md  README.md  RESEARCH_INSTRUMENT_DESIGN.md  ROADMAP-Trumpet.md  ROADMAP.md  SAXOPHONE_RESEARCH.md  STATUS.md  WIKI.md  ai_project_summary.md  analysis_compute_requirements.py  analysis_init_quality.py  analysis_minimal.py  bass_clarinet_register.txt  bass_clarinet_research.txt  bass_clarinet_specifications.md  benchmark_chalumier.py  benchmark_parallel.py  claude_prompt.md  convert_report_to_pdf.py  debug_chalumier_compare.py  debug_cone.py  debug_constraints.py  debug_run.cmd  debug_scipy.py  design_memory.db  issue-body.md  issue-comment.md  profile_openwind.py  profile_single.py  prompt_acoustics_research.md  prompt_bass_clarinet_dimensions.md  prompt_bass_clarinet_register.md  prompt_bell_and_chromatic.md  prompt_bell_distortion.md  (+67 more)
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
backend/: ai_advisor.py  ai_assistant.py  bass_clarinet_full_test.py  benchmark_all.py  benchmark_bass_clarinet.py  benchmark_chalumeau.py  benchmark_diatonic.py  benchmark_optimizers.py  bore_optimizer.py  bore_optimizer_lbfgs.py  chromatic_flute.py  debug_alto.py  debug_fingering.py  debug_hole.py  debug_sax.py  design_desk.py  diagnose_absolute.py  diagnose_bore_ratio.py  diagnose_clustering.py  diagnose_fingering_direction.py  diagnose_fingering_order.py  diagnose_fingering_soprano.py  diagnose_refinement.py  diagnose_register.py  diagnose_root_cause.py  diagnose_single_hole.py  diagnose_tmm_accuracy.py  diagnose_xaphoon_deep.py  fingering_reference.py  flute_calculator.py  lan_chat.py  (+97 more)
(+173 files in other folders)
