[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instrument-designer"
version = "2.0.0"
description = "GUI application for designing, simulating, and 3D-printing musical instruments"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "demakein>=1.0",
    "openwind>=0.12",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.scripts]
instrument-designer = "woodwind_designer.main:main"
woodwind-designer = "woodwind_designer.main:main"

[tool.setuptools.packages.find]
include = ["woodwind_designer*"]
